--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 
   {
-      "name": "vegan-review-frontend",
+      "name": "veganbite-frontend",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
