chore: golangci-lint を Dockerfile に追加

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,9 @@ RUN go install github.com/air-verse/air@v1.52.3
 # Install migrate tool
 RUN go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@v4.17.0
 
+# Install golangci-lint
+RUN go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.64.8
+
 COPY go.mod go.sum ./
 RUN go mod download
 
