feat: DB_SSLMODE環境変数のサポートを追加し、READMEを最新状態に更新  - config: sslmodeをハードコードからDB_SSLMODE環境変数に変更（デフォルト:disable）   - README: プロジェクト構造をクリーンアーキテクチャに合わせて更新  - README: データベーステーブル数を6→8に修正（admin_roles,   product_categories追加）  - README: users→customersのリネームを反映  - README: カテゴリ管理・カスタマー管理ページとAPIエンドポイントを追加  - .env.example: DB_SSLMODEを追加

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 # JWT
 JWT_SECRET=your-secret-key-change-in-production
+
+# Database
+DB_SSLMODE=disable  # 本番環境では require または verify-full を推奨
